p/themes/base-theme/template.css
/* ... */
.dropdown-menu .input {
	display: block;
}

.dropdown-menu .input select,
.dropdown-menu .input input {
	display: block;
	max-width: 95%;
}

.dropdown-target:target ~ .dropdown-menu {
	display: block;
	z-index: 1000;
}

.dropdown-menu + .dropdown-close {
	display: none;
}

.dropdown-target:target ~ .dropdown-close {
	display: block;
	font-size: 0;
	position: fixed;
	top: 0; bottom: 0;
	left: 0; right: 0;
	z-index: 999;
	cursor: default;
}

.separator {
	display: block;
	height: 0;
	border-bottom: 1px solid #aaa;
}

/*=== Alerts */
.alert {
	display: block;
	width: 90%;
}

.alert-warn {
	background: inherit;
}

.group-controls .alert {
	width: 100%
}

.alert-head {
	margin: 0;
	font-weight: bold;
}

.alert ul {
	margin: 5px 20px;
}

.alert.hide {
	display: none;
}

/*=== Icons */
.icon {
	display: inline-block;
	max-width: none;
	width: 16px;
	height: 16px;
	vertical-align: middle;
	line-height: 16px;
}

/* === stream-footer **/
#stream-footer {
	margin: 0 0 5em;
	padding: 1em 0;
	width: 100%;
	border-top: 1px solid #aaa;
	text-align: center;
}

/*=== Pagination */
.nav-pagination {
	margin: 2em auto;
}

.pagination {
	margin: 0 auto;
	padding: 0;
	display: table;
	table-layout: fixed;
	text-align: center;
}

.pagination .item {
	display: table-cell;
	width: 3em;
	font-style: italic;
}

.pagination .item.active {
	min-width: 3em;
	font-weight: bold;
	font-style: normal;
}

.pagination .item a {
	display: block;
	line-height: 3em;
	text-decoration: none;
}

.pagination .pager-previous,
.pagination .pager-next {
	width: 6em;
}

.pagination .pager-first,
.pagination .pager-last {
	width: 7.5em;
}

/*=== Boxes */
.box {
	margin: 20px 20px 20px 0;
	display: inline-block;
	max-width: 95%;
	width: 20rem;
	border: 1px solid #ccc;
	vertical-align: top;
}

.box.visible-semi {
	border-style: dashed;
	opacity: 0.5;
}

.box .box-title {
	position: relative;
	font-size: 1.2rem;
	font-weight: bold;
}

.box .box-title form {
	margin: 0;
}

.box .box-content {
	padding: 8px 8px 8px 16px;
	display: block;
	min-height: 2.5em;
	max-height: 260px;
	overflow: auto;
}

.box .box-content .item.feed {
	display: block;
}

.box .box-content .item.feed.moved {
	font-style: italic;
}

.box .box-content .item.feed.moved .favicon {
	opacity: 0.4;
}

.box .box-content .item.disabled {
	text-align: center;
	font-style: italic;
}

.box .box-content-centered {
	padding: 30px 5px;
	text-align: center;
}

.box .box-content-centered .btn {
	margin: 20px 0 0;
}

/*=== Draggable */
[draggable=true]:hover {
	cursor: move;
}

.dragging {
	background-color: rgba(255, 255, 0, 0.7);
}

.dragging .icon {
	visibility: hidden;
}

.drag-disallowed {
	opacity: 0.5;
}

.drag-active .drop-zone:not(.drag-disallowed) {
	background: repeating-linear-gradient(45deg, transparent, transparent 40px, var(--template-dragdrop-color) 40px, var(--template-dragdrop-color) 60px);
}

.drag-active .drag-hover.drop-zone {
	background-color: var(--template-dragdrop-color);
	transition: background 0.5s;
}

li.drag-hover {
	margin: 0 0 5px;
	border-bottom: 2px solid #ccc;
}

.drag-drop {
	animation-name: droppedKeyframe;
	animation-duration: 0.7s;
}

@keyframes droppedKeyframe {
	0% {
		background-color: rgba(250,250,210, 0.7);
	}

	50% {
		background-color: yellow;
	}

	100% {
		background-color: none;
	}
}

/*=== Scrollbar */
@supports (scrollbar-width: thin) {
	#sidebar,
	.scrollbar-thin {
		scrollbar-color: var(--template-scrollbar-handle) var(--template-scrollbar-track);
		scrollbar-width: thin;
	}

	#sidebar:hover,
	.scrollbar-thin:hover {
		scrollbar-color: rgba(0, 0, 0, 0.3) var(--template-scrollbar-track);
	}
}

@supports not (scrollbar-width: thin) {
	#sidebar::-webkit-scrollbar,
	.scrollbar-thin::-webkit-scrollbar {
		background: var(--template-scrollbar-track);
		width: 8px;
	}

	#sidebar:hover::-webkit-scrollbar,
	.scrollbar-thin:hover::-webkit-scrollbar {
		background: var(--template-scrollbar-track-hover);
	}

	#sidebar::-webkit-scrollbar-thumb,
	.scrollbar-thin::-webkit-scrollbar-thumb {
		background: var(--template-scrollbar-handle);
		display: unset;
		border-radius: 5px;
	}

	#sidebar:hover::-webkit-scrollbar-thumb,
	.scrollbar-thin::-webkit-scrollbar-thumb {
		background: var(--template-scrollbar-handle-hover);
	}
}

/*=== Tree */
.tree {
	margin: 0;
	max-height: 99vh;
	list-style: none;
	text-align: left;
	overflow-x: hidden;
}

.tree-folder-items {
	padding: 0;
	list-style: none;
	transition: max-height .3s linear;
}

.tree-folder-title .title {
	display: inline-block;
	width: 100%;
	vertical-align: middle;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.tree-folder-items > .item {
	display: block;
	white-space: nowrap;
}

.tree-folder-items > .item > a {
	display: inline-block;
	vertical-align: middle;
	width: calc(100% - 32px);
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.tree-folder-items .item.feed {
	position: relative;
}

.tree-bottom {
	visibility: hidden;
	margin-bottom: 18em;
}

/*=== STRUCTURE */
/*===============*/
/*=== Header */
.header {
	display: table;
	width: 100%;
	height: 85px;
	table-layout: fixed;
}

.header > .item {
	display: table-cell;
}

.header > .item.title {
	width: 250px;
	white-space: nowrap;
}

.header > .item.title h1 {
	display: inline-block;
}

.header > .item.title .logo {
	display: inline-block;
	height: 32px;
	vertical-align: middle;
}

.header > .item.configure {
	width: 100px;
}

input[type="search"] {
	-webkit-appearance: none; /* stylelint-disable-line property-no-vendor-prefix */
}

/*=== Body */
#global {
	background: inherit;
	display: table;
	width: 100%;
	height: calc(100vh - 85px);
	table-layout: fixed;
}

#stream:not(.alert-warn) {
	background: inherit;
}

.aside {
	display: table-cell;
	width: 300px;
	vertical-align: top;
}

.aside + .close-aside {
	display: none;
}

/*=== Aside main page */
.aside_feed .category .title {
	width: calc(100% - 35px);
}

.aside_feed .category .title:not([data-unread="0"]) {
	width: calc(100% - 75px);
}
/* ... */

